[CODE] Home page mobile friendly

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" data-bs-theme="light">
+<html lang="en-MT" data-bs-theme="light">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
